@@ -1,19 +1,19 @@
 package com.issuetracker.domain.issue;
 
 import com.issuetracker.domain.issue.request.IssueSearchCondition;
+
+import java.util.Arrays;
 import java.util.HashMap;
 
-import com.issuetracker.domain.issue.response.IssueDetailsResponse;
+import com.issuetracker.domain.issue.response.*;
+
 import com.issuetracker.global.exception.issue.IssueNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.util.Map;
-import com.issuetracker.domain.issue.response.IssueListResponse;
-import com.issuetracker.domain.issue.response.IssueResponse;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,9 +29,12 @@ public class IssueService {
         return savedIssue.getId();
     }
 
-
     @Transactional(readOnly = true)
     public IssueDetailsResponse getDetail(Long issueId) {
+        if (!issueRepository.existsById(issueId)) {
+            throw new IssueNotFoundException();
+        }
+
         IssueDetails issueDetails = issueViewMapper.findById(issueId);
         return IssueDetailsResponse.of(issueDetails);
     }
@@ -44,34 +47,55 @@ public class IssueService {
         issueMapper.update(form);
     }
 
-    @Transactional(readOnly = true)
-    public IssueListResponse getIssues() {
-        List<Issue> issues = issueRepository.findAll();
-        return IssueListResponse.of(
-                issues.stream().map(IssueResponse::of).collect(Collectors.toList())
-        );
+    public void updateStatus(String issueIdString, boolean openStatus) {
+        List<Long> issueIds = Arrays.stream(issueIdString.split(","))
+                .map(String::trim)
+                .map(Long::parseLong)
+                .toList();
+
+        issueRepository.updateOpenStatus(issueIds, openStatus);
+    }
+
+    public void addAssignee(Long issueId, String memberId) {
+        Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
+        issue.addAssignee(memberId);
+
+        issueRepository.save(issue);
+    }
+
+    public void addAssignees(Long issueId, List<String> memberIds) {
+        Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
+        issue.addAssignees(memberIds);
+
+        issueRepository.save(issue);
+    }
+
+    public void deleteAssignee(Long issueId, String memberId) {
+        Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
+        issue.deleteAssignee(memberId);
+
+        issueRepository.save(issue);
     }
 
     public void addLabel(Long issueId, String labelId) {
-        // TODO: 레이블이 존재하는지 확인하는 로직 넣어야 함
         Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
         issue.addLabel(labelId);
 
         issueRepository.save(issue);
     }
 
-    public Issue addLabels(Long issueId, List<String> labelIds) {
+    public void addLabels(Long issueId, List<String> labelIds) {
         Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
         issue.addLabels(labelIds);
 
-        return issueRepository.save(issue);
+        issueRepository.save(issue);
     }
 
-    public Issue deleteLabel(Long issueId, String labelId) {
+    public void deleteLabel(Long issueId, String labelId) {
         Issue issue = issueRepository.findById(issueId).orElseThrow(IssueNotFoundException::new);
         issue.deleteLabel(labelId);
 
-        return issueRepository.save(issue);
+        issueRepository.save(issue);
     }
 
     public void assignMilestone(Long issueId, String milestoneId) {
@@ -88,15 +112,22 @@ public class IssueService {
         return issueRepository.save(issue);
     }
 
-    public List<Issue> getIssueByCondition(IssueSearchCondition condition) {
+    @Transactional(readOnly = true)
+    public IssueListResponse getIssuesByCondition(IssueSearchCondition condition) {
         Map<String, Object> conditionMap = new HashMap<>();
 
         conditionMap.put("author", condition.getAuthor());
         conditionMap.put("isOpen", condition.isOpen());
         conditionMap.put("milestoneId", condition.getMilestoneId());
         conditionMap.put("labelIds", condition.getLabelIds());
-        conditionMap.put("title", condition.getTitle());
+        conditionMap.put("keyword", condition.getKeyword());
+        conditionMap.put("assignees", condition.getAssignees());
+        conditionMap.put("noAssignee", condition.isNoAssignee());
+        conditionMap.put("noMilestone", condition.isNoMilestone());
 
-        return issueMapper.findByCondition(conditionMap);
+        IssueCount issueCount = issueViewMapper.countByCondition(conditionMap);
+        List<SimpleIssue> issues = issueViewMapper.findAllByCondition(conditionMap);
+
+        return IssueListResponse.from(issueCount, issues);
     }
 }
